# BibleOrgSys

./: .gitignore  .travis.yml  BCVBible.py  BOS_LOSM_Timeout.sh  Bible.py  BibleBookOrders.ReadMe.txt  BibleBookOrders.py  BibleBookOrdersConverter.py  BibleBooksCodes.ReadMe.txt  BibleBooksCodes.py  BibleBooksCodesConverter.py  BibleBooksNames.ReadMe.txt  BibleBooksNames.py  BibleBooksNamesConverter.py  BibleLexicon.py  BibleOrgSysGlobals.py  BibleOrganisationalSystems.ReadMe.txt  BibleOrganisationalSystems.py  BibleOrganisationalSystemsConverter.py  BibleOrganizationalSystems.ReadMe.txt  BibleOrganizationalSystems.py  BibleOrganizationalSystemsConverter.py  BiblePunctuationSystems.ReadMe.txt  BiblePunctuationSystems.py  BiblePunctuationSystemsConverter.py  BibleReferences.py  BibleReferencesLinks.py  BibleReferencesLinksConverter.py  BibleStylesheets.py  BibleVersificationSystems.py  BibleVersificationSystemsConverter.py  BibleWriter.py  CSVBible.py  CompareBibles.py  ControlFiles.py  DBLBible.py  DBPOnline.py  DigitalBiblePlatform.py  Door43ContentServiceOnline.py  Door43Online.py  (+89 more)
Apps/: CheckLiteralNTvsGreek.py  CheckuWLiteralNTvsGreek.py  CreateDistributableResources.py  FreeBibleConvert.py  GetKJVVerseNumber.py  MakePhotoBible.py  ReadMe.txt  ReorderSongs.py  TestBooksCodesRE.py  USFM2USX.minimal.py  USFM2USX.py
BibleOrgSys/: Bible.py  BibleOrgSysGlobals.py  BibleWriter.py  UnknownBible.py
ControlFiles/: Bible.cls  Bible1.cls  Bible2.cls  BibleBook.css  BibleBook.ott  SwordProject.conf  To_Door43_controls.txt  To_HTML5_controls.txt  To_Haggai_controls.txt  (+7 more)
(+556 files in other folders)
