[metadata]
name = BibleOrgSys
version = 1.0.0
download_url = https://github.com/openscriptures/BibleOrgSys/tarball/0.0.1
description = Python library for processing Bibles in various formats
long_description = file:README.md
description-file = README.md
long_description_content_type = text/markdown
author = Robert Hunt
author_email = Freely.Given.org+BOS@gmail.com
url = https://github.com/openscriptures/BibleOrgSys
license = GPLv3
license_files = LICENSE
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Software Development :: Bible internals
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: OS Independent

[options]
packages =
    BibleOrgSys

# [options.entry_points]
# console_scripts =
#     amortize=BibleOrgSys.amortize:main

[bdist_wheel]
universal = 1

[pycodestyle]
max-line-length = 120
statistics = True

